# IntentDrift

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  eval.yaml  models.yaml  training.yaml
scripts/: 01_unify_datasets.py  02_extract_activations.py  03_train_detector.py  04_eval_agentdojo.py  make_mini_subset.py
src/secmcp/: config.py
src/secmcp/activations/: anchor.py  dataset.py  drift.py  drift_dataset.py  extract.py
src/secmcp/data/: counterfactual.py  io.py  merger.py  schema.py  split.py
src/secmcp/data/loaders/: __init__.py  agentdojo.py  agentharm.py  agenttraj_l.py  asb.py  injecagent.py
src/secmcp/detectors/: drift.py  evaluate.py  train.py
src/secmcp/integrations/: agentdojo_drift_detector.py  agentdojo_eval.py
src/secmcp/models/: hooks.py  loader.py  truncate.py
tests/: test_activation_dataset.py  test_activation_extract.py  test_agentdojo_drift_detector.py  test_agentdojo_eval.py  test_anchor.py  test_config.py  test_counterfactual.py  test_detector_evaluate.py  test_detector_train.py  test_drift_activations.py  test_drift_detector.py  test_loaders.py  test_model_hooks.py  test_model_loader.py  test_schema.py  test_split.py  test_truncate.py  test_unify_script.py
