[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secmcp"
version = "0.1.0"
description = "Agent prompt-injection detection via task-drift activations"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.41",
    "accelerate>=0.29",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", "outputs", ".git", ".pytest_cache", "__pycache__"]
markers = [
    "gpu: tests that load real GPU-scale HuggingFace checkpoints",
]
